# SoftwareArchitectureAssigment1

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example  create_author_statistics_view.sql  database_schema.sql  docker-compose.yml  populate_explicit_ids.sql  sample_data.sql
migrations/: 20250811184854_init.sql  20250812000005_create_authors_table.sql  20250812000006_create_books_table.sql  20250812000007_create_reviews_table.sql  20250812000008_create_sales_table.sql  20250812001000_create_author_statistics_view.sql  20250812001001_fix_author_statistics_types.sql  20250812001002_final_fix_author_statistics.sql  20250812001003_fix_country_column_alias.sql  20250812001004_debug_hardcode_chile.sql  20250812001005_drop_author_statistics_view.sql  20250812001006_create_simple_author_stats.sql  20250812001007_add_rating_to_simple_stats.sql  20250812001008_add_total_sales_to_simple_stats.sql  20250812001009_fix_data_types_simple_stats.sql
src/: authors.rs  books.rs  main.rs  models.rs  reviews.rs  sales.rs  search.rs  simple_stats.rs  top_books.rs  top_sales.rs
templates/: admin_home.html.tera  admin_search.html.tera  admin_simple_stats.html.tera  admin_top_books.html.tera  admin_top_sales.html.tera  authors_list.html.tera  authors_new.html.tera  base.html.tera  books_list.html.tera  books_new.html.tera
